force-app/main/default/objects/Client_Status__e/Client_Status__e.object-meta.xml
<CustomObject>
    <description>This event is published when the client status changes in salesforce e.g. When a prospective client has been successfully on-boarded it is assigned a CIF number and this event is published</description>
    <label>Client Status</label>
    <pluralLabel>Clients Status</pluralLabel>
</CustomObject>