force-app/main/default/objects/Client_Status__e/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <description>The CIF number allocated to this client</description>
    <label>CIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>