force-app/main/default/objects/Client_Status__e/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <description>The Status of the Client e.g. Prospect, New, Potential, Submitted for Onboarding, CIF Allocated</description>
    <label>Client Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>