force-app/main/default/objects/Client_Status__e/fields/Salesforce_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_Id__c</fullName>
    <description>The internal salesforce generated record id associated to the client</description>
    <label>Salesforce Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>